fixing photo size in rsvp page to larger on smaller screens

--- a/rsvp.css
+++ b/rsvp.css
@@ -161,6 +161,14 @@ nav {
     input {
     border-bottom: 1px solid black;
     }
+    img {
+      width: 100%;
+      padding-right: 1rem;
+      padding-left: 1rem;
+    }
+    .rsvp-h1 {
+      padding: .5rem 1rem;
+    }
 
 }
   
